# c_study

./: .gitignore  CMakeLists.txt  add.c  malloc.c  malloc002.c  point.c  point2.c  point3.c  point4.c  point5.c  point6.c
point/: functionPoint.c
stuct/: struct01.c  struct02.c
