# cmake_minimum_required(VERSION <specify CMake version here>)
project(clion C)

set(CMAKE_C_STANDARD 99)

add_executable(hello hello.c)
add_executable(point point.c)
add_executable(malloc malloc.c)
add_executable(malloc002 malloc002.c)
add_executable(point3 point3.c)
add_executable(point4 point4.c)
add_executable(point5 point5.c)
add_executable(point6 point6.c)
add_executable(functionPoint point/functionPoint.c)
add_executable(struct01 stuct/struct01.c)